src/main/java/com/example/articles/errors/ArticleErrorResponse.kt
package com.example.articles.errors

data class ArticleErrorResponse(
    val status: Int,
    val message: String?
)